--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>TutorialParranderos</title>
+<title>AlohAndes</title>
 </head>
 <body>
-[ST] Tutorial REST
+<h1>
+AlohAndes
+</h1>
 </body>
 </html>
